# mattspy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
mattspy/: __init__.py  condor_exec.py  condor_exec_run.py  condor_yield.py  json.py  loky_yield.py  lsf_exec.py  lsf_yield.py  matcher.py  mattspy_exec_run.py  pbar.py  rcols.py  stats.py  twoptdata.py  url_walk.py  yield_result.py
mattspy/fm/: __init__.py  _jax_impl.py
mattspy/fm/tests/: test_jax_impl.py
mattspy/plotting/: __init__.py  imagescale.py  rcols.py
mattspy/som/: __init__.py  _jax_impl.py
mattspy/som/tests/: test_jax_impl.py
mattspy/stats/: __init__.py  mad.py
mattspy/stats/tests/: test_mad.py
mattspy/tests/: test_json.py  test_loky_yield.py  test_matcher.py  test_twoptdata.py
mattspy/utils/: __init__.py  ahelp.py
scripts/: run_condor_exec.py  run_condor_yield.py  run_lsf_exec.py  run_lsf_yield.py
